--- a/release-notes.html
+++ b/release-notes.html
@@ -32,6 +32,12 @@
       <div class="row">
         <div class="span9" id="main">
           
+<h3><a name="2-0-22-28-05-2019" class="anchor" href="#2-0-22-28-05-2019">2.0.22 - 28.05.2019</a></h3>
+<ul>
+<li>Rename toList and toArray to toListSynchronously and toArraySynchronously</li>
+<li>Add ofSeqAsync and concat</li>
+<li>Improve parallelism of AsyncSeq.cache</li>
+</ul>
 <h3><a name="2-0-21-28-12-2017" class="anchor" href="#2-0-21-28-12-2017">2.0.21 - 28.12.2017</a></h3>
 <ul>
 <li>Fix packaging issues</li>
